index.html 업데이트

--- a/index.html
+++ b/index.html
@@ -156,9 +156,9 @@ function cookieVal(cookieName) {  /// cookieVal 함수를 선언합니다.
       <p class="text-muted mb-0 small">
         Email <a href="mailto:taehoon@taehoon.me">taehoon@taehoon.me</a><br>
         created by
-        <a href="https://twitter.com/hun0_4">Taehoon</a>
+        <a href="https://x.com/@realTaehoon">Taehoon</a>
         |
-        <a href="https://about.taehoon.me">About</a>
+        <a href="https://taehoon.me/about.html">About</a>
         |
         v.0.7.0(Beta)
         
