--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           <a class="nav-link active" aria-current="page" href="index.html">Home&nbsp;</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="https://taehoon.me/labs/lindex.html">Labs&nbsp;</a>
+          <a class="nav-link" href="https://taehoon.me/labs/index.html">Labs&nbsp;</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="https://taehoon.me/x.html">Live Tweets&nbsp;</a>
@@ -97,7 +97,7 @@
   <footer class="footer text-center">
     <div class="container" style="clear: both;>
       <p class="text-muted mb-0 small">
-        Email <a href="mailto:taehoon@taehoon.me">--</a><br>
+        Email <a href="mailto:taehoon@taehoon.me"></a><br>
         created by
         <a href="https://x.com/realTaehoon">Taehoon</a>
         |
