--- a/x.html
+++ b/x.html
@@ -42,9 +42,13 @@
 </nav>
   <!--Nav Bar End-->
 
-  <main class="main">
-    <a class="twitter-timeline" href="https://twitter.com/realTaehoon?ref_src=twsrc%5Etfw">Tweets by realTaehoon</a>
-    <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+    <main class="main">
+    <div class="contant">
+      <div class="card">
+          <a class="twitter-timeline" href="https://twitter.com/realTaehoon?ref_src=twsrc%5Etfw">Tweets by realTaehoon</a>
+          <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+      </div>
+    </div>
   </main>
   
   <!--Footer Start-->
