--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
   <link rel="stylesheet" href="static/berg.css">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
   <link href="style.css" rel="stylesheet" type="text/css">
-  <link rel="icon" href="/favicon.png" type="image/png" />
 </head>
 
 <body>
@@ -34,7 +33,7 @@
           <a class="nav-link" href="https://taehoon.me/labs/index.html">Labs&nbsp;</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="https://taehoon.me/x.html">Live Tweets&nbsp;</a>
+          <a class="nav-link" href="https://taehoon.me/x.html">My 𝕏&nbsp;</a>
         </li>
       </ul>
     </div>
@@ -47,7 +46,7 @@
       
       <div class="box">
         <div class="card">
-          <div class="title" >X (<span style="color:#1DA1F2;">Twitter</span>)<div style="float:right;"><a class="btn btn-outline-dark" href="https://x.com/realTaehoon">X.com Link</a></div></div>
+          <div class="title" >𝕏 (<span style="color:#1DA1F2;">Twitter</span>)<div style="float:right;"><a class="btn btn-outline-dark" href="https://x.com/realTaehoon">𝕏 Link</a></div></div>
           <div class="detail">
           </div>
         </div>
