--- a/about.html
+++ b/about.html
@@ -13,7 +13,6 @@
   <link rel="stylesheet" href="static/berg.css">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
   <link href="style.css" rel="stylesheet" type="text/css">
-  <link rel="icon" href="/favicon.png" type="image/png" />
 </head>
 
 <body>
@@ -31,10 +30,10 @@
           <a class="nav-link active" aria-current="page" href="index.html">Home&nbsp;</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="https://taehoon.me/labs/lindex.html">Labs&nbsp;</a>
+          <a class="nav-link" href="https://taehoon.me/labs/index.html">Labs&nbsp;</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="https://taehoon.me/x.html">Live Tweets&nbsp;</a>
+          <a class="nav-link" href="https://taehoon.me/x.html">My 𝕏&nbsp;</a>
         </li>
       </ul>
     </div>
