--- a/labs/index.html
+++ b/labs/index.html
@@ -1,46 +1,45 @@
-     <!DOCTYPE html>
-    <html>
+ <!DOCTYPE html>
+<html>
 
-    <head>
-      <meta charset="utf-8">
-      <meta name="viewport" content="width=device-width">
-      <title>Taehoon</title>
-      <link rel="icon" href="/favicon.png" type="image/png" />
-      <link href="style.css" rel="stylesheet" type="text/css" />
-      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
-      <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,300italic,400italic,700italic&amp;display=swap">
-      <link rel="stylesheet" href="static/fonts/font-awesome.min.css">
-      <link rel="stylesheet" href="static/berg.css">
-      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-      <link href="style.css" rel="stylesheet" type="text/css">
-      <link rel="icon" href="/favicon.png" type="image/png" />
-    </head>
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width">
+  <title>Taehoon</title>
+  <link rel="icon" href="/favicon.png" type="image/png" />
+  <link href="style.css" rel="stylesheet" type="text/css" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,300italic,400italic,700italic&amp;display=swap">
+  <link rel="stylesheet" href="static/fonts/font-awesome.min.css">
+  <link rel="stylesheet" href="static/berg.css">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+  <link href="style.css" rel="stylesheet" type="text/css">
+</head>
 
-    <body>
+<body>
 
-      <!--Nav Bar Start-->
-      <nav class="navbar navbar-expand-lg bg-light">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="https://taehoon.me/index.html">Taehoon</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav">
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="index.html">Home&nbsp;</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="https://taehoon.me/labs/lindex.html">Labs&nbsp;</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="https://taehoon.me/x.html">Live Tweets&nbsp;</a>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </nav>
-      <!--Nav Bar End-->
+  <!--Nav Bar Start-->
+  <nav class="navbar navbar-expand-lg bg-light">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="https://taehoon.me/index.html">Taehoon</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="index.html">Home&nbsp;</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="https://taehoon.me/labs/index.html">Labs&nbsp;</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="https://taehoon.me/x.html">My 𝕏&nbsp;</a>
+        </li>
+      </ul>
+    </div>
+  </div>
+</nav>
+  <!--Nav Bar End-->
     
     <main class="main">
       <div class="contant">
