--- a/stocklab.html
+++ b/stocklab.html
@@ -64,7 +64,7 @@
   </main>
 
 <script>
-const API_KEY = "YOUR_API_KEY_HERE";  // 🔑 본인 키 입력
+const API_KEY = "0hJ1AvEYlcNWUkkwphe4KEA7cBcxn3Zt";  // 🔑 본인 키 입력
 const USE_WS = false; // 무료 계정 → false 유지
 const POLL_INTERVAL = 5000;
 
