--- a/stocklab.html
+++ b/stocklab.html
@@ -27,7 +27,7 @@
   <div id="ticker-board"></div>
 
 <script>
-const API_KEY = "👉여기에_본인_polygon_api_key_넣기👈";
+const API_KEY = "0hJ1AvEYlcNWUkkwphe4KEA7cBcxn3Zt";
 let symbols = ["AAPL", "TSLA", "MSFT"];
 
 async function fetchQuote(symbol) {
